--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <!-- multistep form -->
-<form id="msform">
+<form id="kirtiform">
 	<!-- progressbar -->
 	<ul id="progressbar">
 		<li class="active">Account Setup</li>
